# movie_file_analyzer

./: .gitignore  README.md  pyproject.toml  run.sh
.claude/: settings.local.json
claude-code-skill/: SKILL.md
src/: cli.py  main.py
src/cli/: __init__.py  main.py  utils.py
src/cli/commands/: __init__.py  analyze.py  cache.py  history.py  status.py
src/core/: ai_connector.py  context_optimizer.py  frame_extractor.py  youtube_downloader.py
src/data/: metadata_store.py  models.py
src/ui/: download_worker.py  main_window.py  panels.py  widgets.py  worker.py
src/ui/dialogs/: __init__.py  export_dialog.py
src/ui/handlers/: __init__.py  analysis_handlers.py  video_handlers.py  youtube_handlers.py
src/ui/panels/: __init__.py  file_selection_panel.py  history_panel.py  progress_panel.py  result_panel.py  settings_panel.py  storage_panel.py
src/utils/: cache_manager.py  storage_manager.py
